hero overflow issue fixed

--- a/app/scss/components/navbar-hero-bg.scss
+++ b/app/scss/components/navbar-hero-bg.scss
@@ -1,8 +1,11 @@
-.navbar-hero-bg {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 0;
-  overflow-x: hidden;
+.navbar-hero-bg-container {
+  position: relative;
+
+  .navbar-hero-bg {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 0;
+  }
 }
